@@ -10,13 +10,13 @@ JDK_CHANGESET = dc5df74132b6
 LANGTOOLS_CHANGESET = 8caec3672381
 OPENJDK_CHANGESET = 5057eaa7e88a
 
-CORBA_SHA256SUM = 7a1169d8f6e61bb3a24eba710ad4d278ddeedbb60760eb1dda7f2792171be8cb
-HOTSPOT_SHA256SUM = 4fe84dbe91df547c076119c4f7608ebecbf0423bc4613c8a1638a0ba62e163bc
-JAXP_SHA256SUM = 4032185df59e093e9401160e2b474507055d64a8d7b6e7d5580c721c13e7050c
-JAXWS_SHA256SUM = 6d3ce845a2cec9a321cb23fd8039e1c6dce3ad78610f5fc92016ca1a042e1687
-JDK_SHA256SUM = 28694bd1a0ec60c5dd1829829074ce57c920a4c9b3df6ca4d95629af3dcf39a3
-LANGTOOLS_SHA256SUM = e200d58705b1c144f367679ae2091ab070ecd8c9bc9c06c95b0508fb5a252c1f
-OPENJDK_SHA256SUM = c0a48e6c8c5251ed86efb4adee0638587052b8308237e4933b4b2448b51dd962
+CORBA_SHA256SUM = edd7cb8ae6a9d9b0e8f9748ecdf31a0f4decc8a06b418baa7b2ef1e7a9d3474a
+HOTSPOT_SHA256SUM = dd59a52bed76f01b382c0c3b44905390bd5e7a77a54b3c8f6de71001376e4b99
+JAXP_SHA256SUM = 4daf673635e1a09339695ec246afbc154c5fc31715a4748a5c6d6ae7332ffdfb
+JAXWS_SHA256SUM = b1a54b1f295451d449683b04de8dc8b6c82014e647f1b41543798d401d011ca3
+JDK_SHA256SUM = cd06344728aff01027875757d26d5ec62b6406095af24e50fcaf72a5dbf8a10c
+LANGTOOLS_SHA256SUM = 495b601afd6b12bee9a8ccc3e1d067bb14789d4f3c0a9d21388b1708d946e3fb
+OPENJDK_SHA256SUM = 6dada5c4c04640ef4b95b7ceeff20baeb69ff4cd64e2591eb64bb33c6035b5cf
 
 CACAO_VERSION = d6264eb66506
 CACAO_SHA256SUM = 94ea7899e806ccbc33a732b5113a8f969d8b1f4ce7ffd27cf04577054f65f63c
